# serv.from.zone

./: .env  .env.example  .env.test  .gitignore  .gitlab-ci.yml  .php_cs.dist  Cargo.toml  Dockerfile  README.md  base64.html  composer.json  docker-compose.yml  dogfood-readme.sh  package-lock.json  package.json  readme.md
config/: routes.yaml
public/: monitor.js
src/: Controller.php  Kernel.php  Service.php  cmd.rs  main.rs
src/DNS/: Dig.php
src/DNS/Record/: Container.php  OpenGraph.php  Resolver.php
src/Emmet/: Exception.php  Expander.php
src/Emmet/Exception/: FailedExpansion.php  LengthExceeded.php
src/txt/: html.rs
templates/: homepage.emmet
templates/emmet/: index.html.twig  validate.html.twig
tests/Unit/: ServiceTest.php
tests/Unit/DNS/Record/: ResolverTest.php
tests/Unit/Emmet/: ExpanderTest.php
