[package]
name = "sfz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
clap = { version = "4.1.4", features = ["derive"] }
trust-dns-proto = "0.22.0"
trust-dns-resolver = "0.22.0"
human-panic = "1.0.3"
colored = "2.0.0"
prettytable-rs = "0.10.0"
url = "2.3.1"
rand = "0.8.5"
pretty_assertions = "1.3.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.21.0"
regex = "1.7.1"
cross = "0.2.5"
dotenvy = "0.15.7"
env_logger = "0.10.0"
